--- a/flutter_application_lab/pubspec.yaml
+++ b/flutter_application_lab/pubspec.yaml
@@ -33,8 +33,12 @@ dependencies:
   firebase_storage: ^10.0.3
   cloud_firestore: ^2.5.2
   date_range_form_field: ^1.0.2
+  firebase_auth: ^3.1.3
   firebase_core: ^1.6.0
   get: ^4.3.8
+  google_sign_in: ^5.1.1
+  google_fonts: ^2.1.0
+  bottom_bar: ^1.2.5
 
 
 
@@ -53,7 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  google_fonts: ^2.1.0
+  
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
